complete correct aria-collapsable menu

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -40,6 +40,13 @@ blockquote, q {
 button, input, textarea, select {
   margin: 0; }
 
+button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: 0;
+  border-radius: 0; }
+
 .btn, .form-control, .link, .reset {
   background-color: transparent;
   padding: 0;
